# pii-secure-persistence-aws

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  apprunner.yaml  backend-rest-client.http  docker-compose.yml  pyproject.toml
backend/deploy/: DEPLOYMENT-OVERVIEW.md  README.md  console-deployment-guide.md  deploy.sh  push-to-ecr.sh  quick-deploy.sh  testing-guide.md
backend/deploy/terraform/: app-runner.tf  terraform.tfvars.example
backend/src/pii_backend/: __init__.py  config.py  lambda_client.py  main.py  models.py  security.py
backend/tests/: test_main.py
database/: .env.example  .gitignore  README.md  pyproject.toml  run_tests.py  schema.sql  setup.md  test_connection.py  test_schema.sql
docs/: architecture.md  implementation-plan.md  prd.md  production-testing-strategy.md  project-completion-summary.md  project-development-statistics.md  security-compliance-summary.md  testing-validation-report.md
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: PIIField.jsx  SecurityInfo.jsx  UserDisplay.jsx  UserForm.jsx  UserList.jsx
frontend/src/services/: api.js
infrastructure/: README.md  aws-console-setup-guide.md  generate-keys.py  generate_fernet_key.py  iam-policies.json  kms-setup.tf  lambda-console-setup-guide.md  pyproject.toml
lambda/: .gitignore  README.md  cleanup_lambda_folder.py  create_final_package.py  database_schema.json  debug_user_data.py  deploy.py  introspect_schema.py  lambda_function_generated.py  main.py  pyproject.toml  test_lambda.py
lambda/test_events/: audit_trail.json  create_user.json  get_user.json  health_check.json  list_users.json
(+3 files in other folders)
