[project]
name = "infrastructure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leonid Shamis", email = "shamis.leonid@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=45.0.5",
]

[project.scripts]
infrastructure = "infrastructure:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
